<resources>
    <string name="app_name">Suarga</string>

    <!--OnBoardingStartString-->
    <string name="title_onboarding_start">Kesejahteraan Ibu Hamil \n dalam Satu Sentuhan</string>
    <string name="text_onboarding_start">Selamat datang di Suarga! Dapatkan panduan nutrisi, pantau perkembangan bayi, dan artikel seputar kesehatan ibu hamil.\nKini semuanya dalam genggamanmu!</string>

    <!--OnBoardingMidString-->
    <string name="title_onboarding_mid">Temukan Kandungan Nutrisi \n Dalam Setiap Makanan</string>
    <string name="text_onboarding_mid">Rasakan kemudahan luar biasa dengan teknologi kecerdasan buatan kami yang mampu mengenali makanan dari gambar dan memberikan informasi nutrisinya secara langsung!</string>

    <!--OnBoardingEndString-->
    <string name="title_onboarding_end">Kami Selalu Hadir Mendampingi Langkahmu, Ibu!</string>
    <string name="text_onboarding_end">Kami memberikan dukungan tak terbatas dalam perjalanan kehamilanmu. Bersama, kita menjaga kesehatanmu dan si kecil dengan cinta dan perhatian tak terbatas!</string>
    <string name="join">Bergabung Sekarang!</string>

    <string name="next">Lanjut</string>
    <string name="loginlink">Sudah punya akun? Masuk</string>
    <string name="loginText">Masuk Akun</string>
    <string name="signupText">Daftar Akun</string>
    <string name="hintemail">Email Ibu</string>
    <string name="img_signup">img_signup</string>
    <string name="hintpassword">Masukkan Password Ibu</string>
    <string name="signup">Daftar</string>
    <string name="name_hint">Masukkan Nama Ibu</string>
    <string name="date_hint">Tanggal Lahir Ibu</string>
    <string name="date_baby_hint">Tanggal Awal Kehamilan</string>
    <string name="title_login">Selamat Datang Kembali, Ibu!</string>
    <string name="text_login"><![CDATA[Kesejahteraan Ibu Hamil dalam Satu Sentuhan.]]></string>
    <string name="rememberme">Ingat Saya</string>
    <string name="forgot_pass">Lupa Password?</string>
    <string name="login">Masuk</string>
    <string name="assesmenText">Asesmen Ibu</string>
    <string name="img_assesmen">img_assesmen</string>
    <string name="textCondition">Kondisi Ibu</string>
    <string name="error_not_a_number">Masukkan Angka</string>
    <string name="hint_height">Tinggi Badan Ibu</string>
    <string name="hint_weight">Berat Badan Ibu</string>
    <string name="textMomActivity">Aktivitas Harian Ibu</string>
    <string name="textMomFact">Faktor yang Membuat Stress</string>
    <string name="img_why_1">Untuk apa informasi tersebut?</string>
    <string name="submitAsesmen">Kumpulkan Asesmen</string>
    <string name="text_result">Untuk menjaga kesehatan Ibu dan bayi, maka asupan nutrisi harian Ibu adalah sebagai berikut:</string>
    <string name="tv_karbohidrat">374</string>
    <string name="tv_protein">113</string>
    <string name="tv_lemak">64</string>
    <string name="textKarbohidrat">Karbohidrat</string>
    <string name="textProtein">Protein</string>
    <string name="textLemak">Lemak</string>
    <string name="textHeight">Tinggi Badan</string>
    <string name="tv_height">158 cm</string>
    <string name="textWeight">Berat Badan</string>
    <string name="tv_weight">58 kg</string>
    <string name="textFormula">Rumus yang kami gunakan</string>
    <string name="toHome">Menuju Beranda</string>

    <string-array name="options_activity">
        <item>Pilihan Aktivitas</item>
        <item>Istirahat Bed Rest</item>
        <item>Bed Rest dengan aktivitas terbatas</item>
        <item>Turun dari tempat tidur</item>
        <item>Aktivitas sedang</item>
        <item>Aktivitas berat</item>
    </string-array>

    <string-array name="options_fact">
        <item>Pilihan Faktor</item>
        <item>Tidak ada stress</item>
        <item>Stress ringan</item>
        <item>Stress sedang</item>
        <item>Stress berat</item>
        <item>Stress sangat berat</item>
    </string-array>

    <!--  Result Activity  -->
    <string name="height_text">"%1$d cm"</string>
    <string name="weight_text">"%1$d kg"</string>

    <!--Navigation-->
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article">Artikel</string>
    <string name="profile">Profil</string>
    <string name="riwayat">Riwayat</string>
    <string name="scanMakanan">Scan Makanan</string>
    <string name="resultScanText">Hasil Scan</string>
    <string name="tv_food_nama">Beri nama aktivitas</string>
    <string name="food_name">Nama Makanan</string>
    <string name="food_time">Waktu Makan</string>
    <string name="time_morning">Pagi</string>
    <string name="time_afternoon">Siang</string>
    <string name="time_night">Malam</string>
    <string name="tv_food_list">Daftar Makanan</string>
    <string name="tv_desc_daftar_makanan">Tambahkan makanan dengan menekan tombol di bawah ini</string>
    <string name="tambah_manual">+ Tambah Manual</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="skip">Lewati</string>
    <string name="btn_read_mote">Baca Sekarang</string>
    <string name="tv_desc_artikel">Ayo baca pilihan artikel untuk kesehatan bayi dan ibu yang kami sediakan!</string>
    <string name="tv_learn_button">Pelajari perkembangan bayi, Ibu</string>
    <string name="tv_nutrition_total">Total Nutrisi</string>

    <!-- Home Fragment  -->
    <string name="tv_karbohidrat_min">0</string>
    <string name="tv_protein_min">0</string>
    <string name="tv_lemak_min">0</string>
    <string name="tv_karbohidrat_max">/ 0 gr</string>
    <string name="tv_protein_max">/ 0 gr</string>
    <string name="tv_lemak_max">/ 0 gr</string>
    <string name="karbohidrat_min">"%1$d"</string>
    <string name="protein_min">"%1$d"</string>
    <string name="lemak_min">"%1$d"</string>
    <string name="karbohidrat_max">"/ %1$d gr"</string>
    <string name="protein_max">"/ %1$d gr"</string>
    <string name="lemak_max">"/ %1$d gr"</string>
    <string name="tv_error_result">Maaf, kami tidak dapat mendeteksi makanan tersebut :(</string>
    <string name="tv_desc_error">Makanan yang kamu scan tidak dapat kami deteksi, hal ini dikarenakan foto makanan tersebut yang kurang jelas atau makanan tersebut belum tersedia di sistem kami.</string>
    <string name="btn_log_manual">Isi Log Manual</string>
    <string name="btn_back_scan">Kembali ke Scan</string>
    <string name="tv_add_food">Tambah Makanan</string>
    <string name="tv_porsi_makan">Jumlah Porsi Makan</string>
    <string name="kuliner_name">Judul Artikel</string>
    <string name="tempatloc">Deskripsi Artikel</string>
    <string name="desc_artikel">Deskripsi Artikel</string>
    <string name="article_title">Judul Artikel</string>
    <string name="tv_history_date">Tanggal Makan</string>
    <string name="activity_name">Nama Aktivitas</string>
    <string name="tv_carbo_total">Karbohidrat</string>
    <string name="tv_lemak_total">Lemak</string>
    <string name="tv_protein_total">Protein</string>
    <string name="tv_vitamin_total">Vitamin</string>
    <string name="paketPremium">Paket Premium</string>
    <string name="tv_myProfile">Profil Saya</string>
    <string name="edit">Edit Profile</string>
    <string name="tv_ubahProfil">Ubah Profil</string>
    <string name="tv_changePass">Ubah Kata Sandi</string>
    <string name="oldPass">Password Lama</string>
    <string name="newPass">Password Baru</string>


</resources>