<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarAsesmen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/assesmenText"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:titleTextColor="@android:color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarAsesmen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_asesmen"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_assesmen"
                app:srcCompat="@drawable/img_asessmen_2" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/text_result"
                android:textAlignment="center"
                android:textColor="@color/neutral100"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Parent Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Karbohidrat Section -->
                <LinearLayout
                    android:id="@+id/karbohidrat_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/textKarbohidrat"
                        android:textColor="@color/neutral100"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_shape_result"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="45dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_karbohidrat" />

                        <TextView
                            android:id="@+id/tv_carbohydrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/tv_karbohidrat"
                            android:textColor="@color/neutral100"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_gr" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Protein Section -->
                <LinearLayout
                    android:id="@+id/protein_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/textProtein"
                        android:textColor="@color/neutral100"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_shape_result"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="45dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_protein" />

                        <TextView
                            android:id="@+id/tv_protein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/tv_protein"
                            android:textColor="@color/neutral100"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_gr" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!-- Lemak Section -->
            <LinearLayout
                android:id="@+id/lemak_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_shape_result"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textLemak"
                    android:textColor="@color/neutral100"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_lemak" />

                    <TextView
                        android:id="@+id/tv_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_lemak"
                        android:textColor="@color/neutral100"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_gr" />
                </LinearLayout>
            </LinearLayout>

            <!-- Container Kondisi Ibu -->
            <LinearLayout
                android:id="@+id/container_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_shape_result"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title -->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kondisi Ibu"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Underline for Title -->
                <View
                    android:layout_width="85dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black" />

                <!-- Content Layout with 2 columns -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <!-- Column 1 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textHeight"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/tv_height"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/textMomActivity"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_mom_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@array/options_activity"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Column 2 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textWeight"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/tv_weight"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/textMomFact"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_stress_factor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@array/options_fact"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.dicoding.suargaapp.customview.MyButtonOutline
                android:id="@+id/formula_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:gravity="start|center"
                android:stateListAnimator="@null"
                android:text="@string/textFormula"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_why"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/img_why_1"
                app:srcCompat="@drawable/img_why_2" />

            <com.dicoding.suargaapp.customview.MyButton
                android:id="@+id/home_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:stateListAnimator="@null"
                android:text="@string/toHome"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
