<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.asesmen.AsesmenActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarAsesmen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/assesmenText"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:titleTextColor="@android:color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_asesmen"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/img_assesmen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarAsesmen"
        app:srcCompat="@drawable/img_asessmen_1"/>

    <TextView
        android:id="@+id/tv_asesmen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCondition"
        android:textColor="@color/neutral100"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_asesmen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary80"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconDrawable="@drawable/ic_cm"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@+id/weightEditTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_asesmen"
        app:startIconDrawable="@drawable/ic_height">

        <com.dicoding.suargaapp.customview.NumberEditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:layout_marginEnd="24dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary80"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconDrawable="@drawable/ic_kg"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightEditTextLayout"
        app:layout_constraintTop_toTopOf="@+id/heightEditTextLayout"
        app:startIconDrawable="@drawable/ic_weight">

        <com.dicoding.suargaapp.customview.NumberEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_momActivty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/textMomActivity"
        android:textColor="@color/neutral100"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditTextLayout" />

    <com.dicoding.suargaapp.customview.DropdownOptionView
        android:id="@+id/option_actvity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_momActivty"
        app:options="@array/options_activity"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_momFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/textMomFact"
        android:textColor="@color/neutral100"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_actvity" />

    <com.dicoding.suargaapp.customview.DropdownOptionView
        android:id="@+id/option_fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_momFact"
        app:options="@array/options_fact"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/img_why"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:contentDescription="@string/img_why_1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_fact"
        app:srcCompat="@drawable/img_why_1" />

    <com.dicoding.suargaapp.customview.MyButton
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:stateListAnimator="@null"
        android:text="@string/submitAsesmen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_why"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>