<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resultscan.ErrorScanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarAsesmen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/resultScanText"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:titleTextColor="@android:color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_error_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_error_result"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textAlignment="center"
        android:textColor="@color/primary60"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarAsesmen" />

    <ImageView
        android:id="@+id/img_error_scan"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_scan"
        app:srcCompat="@drawable/img_error_resultt" />

    <TextView
        android:id="@+id/tv_error_scan_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_desc_error"
        android:textAlignment="center"
        android:textColor="@color/neutral60"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_error_scan" />

    <com.dicoding.suargaapp.customview.MyButton
        android:id="@+id/btn_log_manual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:stateListAnimator="@null"
        android:text="@string/btn_log_manual"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.dicoding.suargaapp.customview.MyButtonWhite
        android:id="@+id/btn_back_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/btn_back_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>